TabPFNの導入完了

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # プロジェクトルートディレクトリ（絶対パス）
 # 例: PROJECT_ROOT=/Users/username/Desktop/eog_product
 PROJECT_ROOT=
+
+# HuggingFace トークン（TabPFNモデルのダウンロードに必要）
+# https://huggingface.co/settings/tokens から取得
+HF_TOKEN=
